Fixed sampling rate validation.It doesn't require length based validation but only value based

--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -305,7 +305,7 @@
 			</li>
 		</ul>
 		<div id="getDeviceErrorDiv" class ="errorDiv"></div>
-		<h1>List of devices</h1>
+		<h1>Registered devices</h1>
 		<div id="accordion"></div>
 		<div id="errorDiv" class="errorDiv"></div>
 		<button id="addNewDeviceOrTemplate">
