--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -155,6 +155,7 @@
 						sign_up[USERNAME] = sign_up_username;
 						sign_up[PASSWORD] = sign_up_password;
 						sign_up[EMAIL] = sign_up_email;
+						alert(JSON.stringify(sign_up));
 						//Submit the login details
 						try {
 
