--- a/repositoryUserInterface/public/stylesheets/styles.css
+++ b/repositoryUserInterface/public/stylesheets/styles.css
@@ -42,6 +42,7 @@ div.errorDiv
 }
 
 #full-screen-background-image {
+	background-repeat: repeat;
         z-index: -999;
         min-height: 100%;
         min-width: 1024px;
@@ -50,4 +51,5 @@ div.errorDiv
         position: fixed;
         top: 0;
         left: 0;
+        
       }
