--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -1,8 +1,17 @@
-<html>
+<!doctype html> <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+	<!--<![endif]-->
 	<head>
-		<title>SensorAct</title>
-		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/styles_non_centered.css'}">
-		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/jquery-ui-1.8.20.custom.css'}">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Devices</title>
+		<!--<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/styles_non_centered.css'}">-->
+		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/jquery-ui-1.8.21.custom.css'}">
+		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/style.css'}">
+		<script src="@{'/public/js/libs/modernizr-2.0.6.min.js'}"></script>
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/jquery-ui-1.8.20.custom.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 		<script src="@{'/public/javascripts/constants.js'}" type="text/javascript" charset="${_response_encoding}"></script>
@@ -275,7 +284,7 @@
 											for(var j = 0; j < numberOfActuators; j++) {
 												var actuatorName = actuator[j][DEVICE_ACTUATOR_NAME];
 												//var sensorId = "actuator_" + i.toString() + "_" + j.toString();
-												$(idSelector).children(".oldActuators").append("<div id=\"oldActuator\"><label>ActuatorName</label><input value=\"" + actuatorName + "\"></input></div>");
+												$(idSelector).children(".oldActuators").append("<div id=\"oldActuator\"><label>Actuator<br/>Name</label><input value=\"" + actuatorName + "\"></input></div>");
 											}
 
 										}
@@ -298,9 +307,8 @@
 				}
 
 				displayDevicesOrTemplates(URL_LIST_ALL_DEVICES, URL_DELETE_DEVICE, "true", "#accordion");
-				displayDevicesOrTemplates(URL_LIST_ALL_DEVICE_TEMPLATES, URL_DELETE_DEVICE_TEMPLATE,"false", "#accordion1");
+				displayDevicesOrTemplates(URL_LIST_ALL_DEVICE_TEMPLATES, URL_DELETE_DEVICE_TEMPLATE, "false", "#accordion1");
 
-				
 				/*
 				 * Description:This function is used to add a new sensor
 				 */
@@ -323,7 +331,6 @@
 						"headerSelected" : "ui-icon-minus"
 					}
 				});
-				$(".accordion").accordion();
 
 				$("#addNewDeviceOrTemplate").click(function() {
 
@@ -335,23 +342,43 @@
 		</script>
 	</head>
 	<body>
-		<ul>
-			<li>
-				<a id="home" >Home</a>
-			</li>
-			<li>
-				<a id="logout">Logout</a>
-			</li>
-		</ul>
-		<div id="getDeviceErrorDiv" class ="errorDiv"></div>
-		<h1>Registered devices</h1>
-		<div id="accordion"></div>
-		shkdjasda <div id="accordion1"></div>
-		<div id="errorDiv" class="errorDiv"></div>
-		<button id="addNewDeviceOrTemplate">
-			Create New Device/Template
-		</button>
-		<input type="hidden" id =username value =${username}>
-		</input>
+		<div id="header-container">
+			<header class="wrapper clearfix">
+				<h1 id="title">SensorAct
+				<br />
+				<br />
+				<span style="font-size:25px;">Sense - Interact - Actuate</span></h1>
+				<nav>
+					<ul>
+						<li>
+							<a id="home" >Home</a>
+						</li>
+						<li>
+							<a id="logout">Logout</a>
+						</li>
+					</ul>
+				</nav>
+			</header>
+		</div>
+		<div class="wrapper" style="">
+			<div id="getDeviceErrorDiv" class ="errorDiv"></div>
+			<h1 class="newfont" style="text-align:center;">Registered devices</h1>
+			<hr>
+			<div id="accordion"></div>
+			<h1 class="newfont" style="text-align:center;">Registered templates</h1>
+			<div id="accordion1"></div>
+			<hr>
+			<div id="errorDiv" class="errorDiv"></div>
+			<button id="addNewDeviceOrTemplate">
+				Create New Device/Template
+			</button>
+			<input type="hidden" id =username value =${username}>
+			</input>
+		</div>
+		<div style="clear:both;" id="footer-container">
+			<footer class="wrapper">
+				<h4 align="center">&copy2012 |MUC,IIIT-Delhi</h4>
+			</footer>
+		</div>
 	</body>
 </html>
