--- a/repositoryUserInterface/public/stylesheets/styles_non_centered.css
+++ b/repositoryUserInterface/public/stylesheets/styles_non_centered.css
@@ -1,28 +1,11 @@
 
-ul, p, h2 {
-	font-family: Arial, "MS Trebuchet", sans-serif;
-	padding: 10px;
+label
+{
+	width: 150px; 
+  float:left;
+  clear:left;
 }
 
-ul li {
-	display:inline-block;
-}
-
-ul li a {
-	background: #333;
-	color: #fff;
-	padding:10px;
-	text-decoration: none;
-}
-
-ul li a:hover {
-	text-decoration: underline;
-}
-
-label {
-	width: 140px;
-	display: inline-block;
-}
 
 input.error {
 	border: 3px solid #f00;
@@ -38,14 +21,7 @@ input
 {
 	width :120px;
 }
-h1
-{
-	background: #333;
-	color: #fff;
-	padding:30px;
-	font-family: Arial, "MS Trebuchet", sans-serif;
-	
-}
+
 
 div#newSensor
 {
